<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dialog Plus Sample</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>

    <string name="position_bottom">Bottom</string>
    <string name="position_center">Center</string>
    <string name="position_top">Top</string>
    <string name="expanded">Expanded</string>
    <string name="fixed_header">Fixed header</string>
    <string name="fixed_footer">Fixed footer</string>
    <string name="list_count">List count</string>
    <string name="content_height">Content height (px)</string>
    <string name="content_width">Content width (px)</string>
    <string name="show_dialog">Show dialog</string>
</resources>
