<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
  <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
    <RadioGroup android:id="@+id/holderRadioGroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_horizontal_margin" android:orientation="horizontal">
      <RadioButton android:id="@+id/basic_holder_radio_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="true" android:text="@string/view_holder" android:textColor="@android:color/black" />
      <RadioButton android:id="@+id/list_holder_radio_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="false" android:text="@string/list_holder" android:textColor="@android:color/black" />
      <RadioButton android:id="@+id/grid_holder_radio_button" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="false" android:text="@string/grid_holder" android:textColor="@android:color/black" />
    </RadioGroup>
    <RadioGroup android:id="@+id/positionRadioGroup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_horizontal_margin" android:orientation="horizontal">
      <RadioButton android:id="@+id/bottomPosition" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="true" android:text="@string/position_bottom" android:textColor="@android:color/black" />
      <RadioButton android:id="@+id/centerPosition" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="false" android:text="@string/position_center" android:textColor="@android:color/black" />
      <RadioButton android:id="@+id/topPosition" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:checked="false" android:text="@string/position_top" android:textColor="@android:color/black" />
    </RadioGroup>
    <LinearLayout android:id="@+id/configLayout" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="wrap_content">
      <CheckBox android:id="@+id/headerCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_header" android:checked="true" />
      <CheckBox android:id="@+id/footerCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_footer" android:checked="true" />
      <CheckBox android:id="@+id/expandedCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/expanded" android:checked="true" />
      <CheckBox android:id="@+id/fixedHeaderCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fixed_header" android:checked="true" />
      <CheckBox android:id="@+id/fixedFooterCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fixed_footer" android:checked="true" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
      <EditText android:id="@+id/listCountInput" android:layout_width="100dp" android:importantForAutofill="no" android:inputType="numberSigned" android:hint="@string/list_count" android:text="16" android:layout_height="wrap_content" />
      <EditText android:layout_width="100dp" android:layout_height="wrap_content" android:id="@+id/contentHeightInput" android:importantForAutofill="no" android:inputType="numberSigned" android:hint="@string/content_height" android:text="-1" />
      <EditText android:layout_width="100dp" android:layout_height="wrap_content" android:id="@+id/contentWidthInput" android:importantForAutofill="no" android:inputType="numberSigned" android:hint="@string/content_width" android:text="-1" />
    </LinearLayout>
    <Button android:id="@+id/showDialogButton" android:layout_width="wrap_content" android:text="@string/show_dialog" android:layout_height="wrap_content" />
  </LinearLayout>
</ScrollView>
