<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/footer_sample"
            android:textColor="@color/dialogplus_black_overlay"
            android:textSize="@dimen/sample_text_size"/>

    <Button
            android:id="@+id/footer_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_button_close"
            android:textColor="@color/primary"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/selector_bg_button"/>

    <Button
            android:id="@+id/footer_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer_button_confirm"
            android:textColor="@color/primary"
            android:textSize="@dimen/button_text_size"
            android:background="@drawable/selector_bg_button"/>

</LinearLayout>

